# yp-module-3

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yaml
blog-cli/: .gitignore  Cargo.toml  README.md
blog-cli/src/: main.rs
blog-client/: Cargo.toml  README.md
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-proto/: Cargo.toml  README.md  build.rs
blog-proto/proto/: blog.proto
blog-proto/proto/blog/v1/: blog.proto
blog-proto/src/: lib.rs
blog-server/: Cargo.toml  Dockerfile  README.md
blog-server/.sqlx/: query-15c6e98be376f235183d7dfc03474333a827c6b6c6388180d37b0d65c9e14e53.json  query-1d2a8b7d3a68ec3b7cdbc17f0ffb92690b2753350fe5613a0cd33da4f439c56b.json  query-77cfc1571d94de78779273858331db8f7969e5602d42b300659d2fe58d41ff5c.json  query-81b11185541f5d9b29d551bdc1492cc2545416eda69fb819c9192c2b9139391e.json  query-a2fedea590afea52b8424bd90694bd742b6ffc7995433ff5e4ca9815d198bb11.json  query-a9c46c882da42a18e611e4a486cccd65c2e300036b8d86195ac9076a98872a0f.json  query-af33ee09d26c9d189165e9ae0bf90b01280bf989e5f8ab0bfc5580d7d47dfde9.json  query-b6692d27f99231bd482d2fe6c6986f1fa6bb179fff1eb7a575723b4dd244ea1f.json  query-d01ebee7bb868117414a07a000cf200683c7d28fc7b9e868ea41621733ec0ad7.json  query-e0b328a8c5a19a3c5d5bf5ada79887522e6d8358694b673ab6a919e86b94562d.json  query-e279b7a5e50e3151394f5d038d46371dab52cd6eea127a0870f0f0d3747935ee.json
blog-server/migrations/: 20260626090653_create_users.sql  20260626091353_create_posts.sql
blog-server/src/: application.rs  data.rs  domain.rs  infra.rs  lib.rs  main.rs  presentation.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: post_repo.rs  user_repo.rs
blog-server/src/domain/: error.rs  post.rs  user.rs
blog-server/src/infra/: db.rs  jwt.rs  logging.rs
blog-server/src/presentation/: grpc.rs  http.rs  middleware.rs
blog-server/tests/: http_auth.rs  http_posts.rs  repo_post.rs  repo_user.rs
blog-server/tests/common/: mod.rs
blog-wasm/: Cargo.toml  README.md
blog-wasm/.zed/: settings.json
blog-wasm/src/: app.rs  main.rs
