[workspace]
resolver = '3'
members = ["blog-cli", "blog-client", "blog-proto", "blog-server", "blog-wasm"]

[workspace.dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
thiserror = "2"
anyhow = '1'
dotenvy = "0.15"
chrono = { version = "0.4.45", features = ["serde"] }
tokio = { version = "1", features = ["macros"] }
