[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
blog-proto = { path = "../blog-proto" }
tonic.workspace = true
prost.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
