[package]
name = "blog-proto"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-prost-build = "0.14"
anyhow.workspace = true
